--- a/src/components/Navbar/Navbar.styled.css
+++ b/src/components/Navbar/Navbar.styled.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: #017fff;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -17,11 +17,16 @@
     height: 80px;
     max-width: 1500px;
   }
+
+  .logo{
+    height: 100px;
+    width: 100px;
+  }
   
   .navbar-logo {
     color: #fff;
     justify-self: start;
-    margin-left: 20px;
+    /* margin-left: 1px; */
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
@@ -47,6 +52,7 @@
   
   .nav-item {
     height: 80px;
+    margin-bottom: 25px;
   }
   
   .nav-links {
