--- a/src/components/Footer/Footer.styled.css
+++ b/src/components/Footer/Footer.styled.css
@@ -3,6 +3,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 160px;
+  bottom: auto;
+  position:absolute;
+  width: 100%;
   
 
 }
