--- a/src/components/Tabs/Tabs.styled.css
+++ b/src/components/Tabs/Tabs.styled.css
@@ -15,7 +15,7 @@
     width: 100%;
     height: 300px;
     background: #f1f1f1;
-    margin: 100px auto 0;
+    margin: 25px auto 0;
     word-break: break-all;
     border: 1px solid rgba(0, 0, 0, 0.274);
   }
@@ -89,3 +89,21 @@
     display: block;
   }
   
+  .containerTanggalKet{
+    display: flex !important;
+  }
+  .tanggal{
+    display: flex !important;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    height: 30px;
+  }
+  .keterangan{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+  }
